fixed media-left vertical alignment

--- a/assets/css/bootstrap-override.less
+++ b/assets/css/bootstrap-override.less
@@ -196,6 +196,10 @@ label{
     margin-bottom: 5px;
 }
 
+.media-left{
+  vertical-align: top;
+}
+
 .dropdown-menu {
     max-height: 400px;
     overflow-y: auto;
